--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,1 +1,26 @@
-# Frontend CI
+# .github/workflows/frontend-ci.yml
+name: Frontend CI
+on:
+  push:
+    branches: [main]
+    paths: ['frontend/**', '.github/workflows/frontend-ci.yml']
+  pull_request:
+    branches: [main]
+    paths: ['frontend/**', '.github/workflows/frontend-ci.yml']
+jobs:
+  lint-and-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+      - name: Install and build
+        run: npm ci && npm run build
+        working-directory: frontend
+      - name: Lint
+        run: npm run lint
+        working-directory: frontend
+        continue-on-error: true   # bis ESLint konfiguriert
