--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -12,15 +12,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Check frontend files
+        id: frontend
+        shell: bash
+        run: |
+          if [[ -f "frontend/package.json" ]]; then
+            echo "has_frontend=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_frontend=false" >> "$GITHUB_OUTPUT"
+          fi
+
+          if [[ -f "frontend/package-lock.json" ]]; then
+            echo "has_lockfile=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_lockfile=false" >> "$GITHUB_OUTPUT"
+          fi
       - uses: actions/setup-node@v4
+        if: steps.frontend.outputs.has_frontend == 'true' && steps.frontend.outputs.has_lockfile == 'true'
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+      - uses: actions/setup-node@v4
+        if: steps.frontend.outputs.has_frontend == 'true' && steps.frontend.outputs.has_lockfile != 'true'
+        with:
+          node-version: '20'
       - name: Install and build
+        if: steps.frontend.outputs.has_frontend == 'true'
         run: npm ci && npm run build
         working-directory: frontend
       - name: Lint
+        if: steps.frontend.outputs.has_frontend == 'true'
         run: npm run lint
         working-directory: frontend
         continue-on-error: true   # bis ESLint konfiguriert
