feat(frontend): vollständiges frontend-grundgerüst mit vite, react und docker
- Vite 5 + React 18 + TypeScript 5.6 Projekt erstellt
- TailwindCSS 3.4 für Styling eingerichtet
- Axios 1.13 für API-Kommunikation mit VITE_API_URL
- React Router 6.30 mit Layout-Komponente und Routes (/, /tree, /ziel/:id)
- API-Client (src/api/goals.ts) mit allen CRUD-Funktionen
- Multi-Stage Dockerfile mit node:20-alpine und nginx:alpine
- Docker-Compose erweitert um Frontend-Service mit Build-Args
- Backend CORS auf localhost und localhost:5173 konfiguriert
- Platzhalter-Komponenten für Timeline, Tree und Detail-Ansicht

Frontend erreichbar unter http://localhost (Docker) oder http://localhost:5173 (Dev).
Backend CORS ermöglicht Zugriff von beiden Origins.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
-# Konzept 2.0 / Phase 1.5: docker-compose nur mit Backend-Service
-# Frontend-Service kommt erst in Phase 3.6 hinzu
+# Konzept 2.0 / Phase 3.6: docker-compose mit Backend und Frontend
 
 services:
   backend:
     build: ./backend
     ports:
       - "8000:8000"
-    # Optional: Volume für SQLite-DB (später in Phase 2)
+    # Optional: Volume für SQLite-DB (später in Phase 8)
     # volumes:
     #   - ./backend/data:/app/data
+
+  frontend:
+    build:
+      context: ./frontend
+      args:
+        VITE_API_URL: http://localhost:8000
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
