--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xyflow/react": "^12.10.0",
     "axios": "^1.13.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.3"
+    "react-router-dom": "^6.30.3",
+    "vis-data": "^8.0.3",
+    "vis-timeline": "^8.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
