feat(deployment): phase 8 - production-ready deployment setup
Docker & Volume:
- Docker-Volume für persistente SQLite-Datenbank eingerichtet
- DB_PATH Umgebungsvariable in docker-compose.yml konfiguriert
- Restart-Policy (unless-stopped) für automatischen Neustart
- Production docker-compose.prod.yml mit Healthchecks

Dokumentation:
- Umfangreiches README.md mit Features, Setup, Deployment
- DEPLOYMENT.md mit detaillierten Deployment-Anleitungen
- CONTRIBUTING.md mit Commit-Standards und Code-Stil
- .env.example für Umgebungsvariablen-Template
- .dockerignore für optimierte Docker-Builds

Die Anwendung ist nun production-ready und kann auf beliebigen
Plattformen mit Docker deployed werden. Daten bleiben persistent.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
-# Konzept 2.0 / Phase 3.6: docker-compose mit Backend und Frontend
+# Konzept 2.0 / Phase 3.6 & 8.1: docker-compose mit Backend und Frontend
 
 services:
   backend:
     build: ./backend
     ports:
       - "8000:8000"
-    # Optional: Volume für SQLite-DB (später in Phase 8)
-    # volumes:
-    #   - ./backend/data:/app/data
+    environment:
+      - DB_PATH=/app/data/database.db
+    volumes:
+      - backend_data:/app/data
+    restart: unless-stopped
 
   frontend:
     build:
@@ -18,3 +20,8 @@ services:
       - "80:80"
     depends_on:
       - backend
+    restart: unless-stopped
+
+volumes:
+  backend_data:
+    driver: local
