feat(phase-9.1): schweizer datumsformat und edit-modus implementiert
Implementiert Sprint 9.1 der Feature-Roadmap mit vollständiger CRUD-Funktionalität
und verbesserter UX durch Schweizer Datumsformatierung.

Features:
- Schweizer Datumsformat (DD.MM.YYYY) in allen Ansichten
- Edit-Modus: Ziele vollständig bearbeitbar über neue /ziel/:id/bearbeiten Route
- Zusatzinfo: "Noch X Tage" / "X Tage überfällig" bei Enddatum
- date-fns Library für konsistente Datumsformatierung

Entwickler-Features:
- Development-Setup mit Hot Reload (docker-compose.dev.yml)
- Vite Dev Server mit HMR für Frontend (Port 5173)
- Uvicorn Auto-Reload für Backend
- Keine Rebuilds zwischen Code-Änderungen nötig
- Vollständige Dokumentation (DEV_SETUP.md, DEV_QUICKSTART.md, COMMANDS_CHEATSHEET.md)

Dokumentation:
- FEATURE_ROADMAP.md: Vollständiger Plan für Phasen 9-14
- DEBUG_STRATEGIE.md: Systematischer Debug-Ansatz
- BROWSER_TEST.md: Browser-Troubleshooting
- COMMANDS_CHEATSHEET.md: Alle wichtigen Befehle

Technische Details:
- date-fns 3.0.0 für Datumsformatierung
- EditGoal-Komponente mit Formular-Validierung
- formatToSwiss(), formatToISO() Utils
- Vite-Config optimiert für Docker File-Watching
- Separate Dev-Dockerfiles mit Volume-Mounts

Changed Files:
- frontend/src/pages/EditGoal.tsx (neu)
- frontend/src/utils/dateFormat.ts (neu)
- frontend/src/pages/Detail.tsx (Edit-Button + Schweizer Format)
- frontend/src/pages/NewGoal.tsx (Schweizer Format Preview)
- frontend/src/pages/Timeline.tsx (Timeline-Rendering-Fix)
- frontend/src/App.tsx (Edit-Route)
- docker-compose.dev.yml (neu)
- frontend/Dockerfile.dev (neu)
- backend/Dockerfile.dev (neu)
- frontend/vite.config.ts (Docker File-Watching)

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,8 +9,9 @@ ARG VITE_API_URL=http://localhost:8000
 # package-lock.json und package.json kopieren
 COPY package-lock.json package.json ./
 
-# Dependencies installieren (npm ci für reproduzierbare Builds)
-RUN npm ci
+# Dependencies installieren (npm install da package-lock.json noch nicht aktualisiert)
+# TODO: Nach lokalem npm install auf npm ci umstellen
+RUN npm install
 
 # Source-Code kopieren
 COPY . .
